# Fixit-AI-Voicebot-RL

./: .gitignore  README.md  pyproject.toml  run.py  streamlit_app.py
configs/: default.yaml  freeze_rules.yaml
docs/: DESIGN.md
outputs/: action_report.json  bot_states.parquet  eval_report.json  feature_names.json  feature_report.json  final_report.json  mdp_rows.parquet  parse_report.json  reward_report.json  train_report.json  trajectories.parquet
policies/: policy_baseline_v0.json  policy_learned_v1.json  registry.json
src/: __init__.py  action_infer.py  config.py  features.py  models.py  parser.py  reward.py  split.py  train.py  trajectory.py
src/control/: __init__.py  __main__.py  freeze.py  inspect.py  registry.py
src/eval/: fqe.py  ope.py  propensity.py  replay.py  run_eval.py
src/policy/: __init__.py  baseline.py  constraints.py  discretizer.py  learner.py
tests/: test_action_infer.py  test_control.py  test_features.py  test_ope.py  test_parser.py  test_reward.py  test_train.py
tests/fixtures/: action_gold_labels.json
