[project]
name = "fixit-voicebot-rl"
version = "0.1.0"
description = "Reinforcement learning system for voicebot turn-level dialogue policy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
